--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -8,4 +8,11 @@
   height: 100vh;
   width: 100vw; 
   background-image: url("./assets/images/background.jpg");
+  background-size: cover;
+}
+
+@media only screen and (min-width: 1100px) {
+.background { 
+  background-size: contain;
+}
 }
