--- a/src/Components/Navbar/Navbar.module.scss
+++ b/src/Components/Navbar/Navbar.module.scss
@@ -1,29 +1,31 @@
 @import "../../assets/styles/variables.scss";
 
 header {
-  height: 11vh;
+  height: 22vh;
   width: 100vw;
   background-color: #ff0000;
   color: white;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: space-between;
   border: $brick-border;
 
   .title {
-    width: 40%;
-    height: 100%;
+    width: 100%;
+    height: 50%;
     display: flex;
 
     img {
-      width: 20%;
+      width: 30%;
       border-right: $brick-border;
+      border-bottom: $brick-border;
     }
 
     h1 {
       text-align: center;
-      width: 60%;
+      width: 70%;
       border-right: $brick-border;
+      border-bottom: $brick-border;
       font-family: $lego-font;
       font-style: italic;
       -webkit-text-stroke: 1px black;
@@ -31,7 +33,8 @@ header {
   }
 
   .searchSection {
-    width: 25%;
+    width: 100%;
+    height: 50%;
     display: flex;
     .brick {
       background-color: yellow;
@@ -39,7 +42,6 @@ header {
       width: 70%;
       text-align: center;
       border-left: $brick-border;
-      border-right: $brick-border;
 
       .input {
         height: 80%;
@@ -51,28 +53,62 @@ header {
     }
 
     .button {
-      background-color: rgb(8, 236, 8);
       height: 100%;
       width: 30%;
-      text-align: center;
-      border-left: $brick-border;
-      border-right: $brick-border;
+    }
+  }
+}
 
-      &:hover {
-        background-color: green;
-        cursor: pointer;
+@media only screen and (min-width: 768px) {
+  header {
+    height: 8vh;
+    width: 100vw;
+    flex-direction: row;
+
+    .title {
+      width: 60%;
+      height: 100%;
+      display: flex;
+
+      img {
+        width: 20%;
+        border-bottom: none;
       }
 
-      p {
-        font-size: 28px;
-        font-family: $lego-font;
-        font-style: italic;
-        -webkit-text-stroke: 1px black;
-
-        &:hover {
-          cursor: pointer;
-        }
+      h1 {
+        width: 60%;
+        border-bottom: none;
       }
+    }
+
+    .searchSection {
+      width: 45%;
+      height: 100%;
+
+      .brick {
+        height: 100%;
+      }
+    }
+  }
+}
+
+@media only screen and (min-width: 1000px) {
+  header {
+    .searchSection {
+      width: 35%;
+    }
+  }
+}
+
+
+@media only screen and (min-width: 1100px) {
+  header {
+    .title {
+      width: 40%;
+    }
+
+    .searchSection {
+      width: 25%;
     }
   }
 }
