--- a/src/Components/Card/Card.module.scss
+++ b/src/Components/Card/Card.module.scss
@@ -1,8 +1,8 @@
 @import "../../assets/styles/variables.scss";
 
 section {
-  height: 50vh;
-  width: 90vw;
+  height: 50%;
+  width: 90%;
   margin: auto;
   border: $brick-border;
   margin-top: 8px;
@@ -39,23 +39,24 @@ section {
     text-align: center;
     word-wrap: wrap;
 
-    .year, .parts {
-        height: 100%;
-        width: 50%; 
-        border-top: $brick-border;
+    .year,
+    .parts {
+      height: 100%;
+      width: 50%;
+      border-top: $brick-border;
     }
 
     .year {
-        background-color: rgb(5, 163, 216);
-    }
-    
-    .parts {
-        background-color: orange;
-        border-left: $brick-border;
+      background-color: rgb(5, 163, 216);
     }
 
-    p { 
-      margin: 8px;  
+    .parts {
+      background-color: orange;
+      border-left: $brick-border;
+    }
+
+    p {
+      margin: 8px;
       border: $brick-border;
       border-radius: 10px;
       background-color: white;
@@ -63,5 +64,46 @@ section {
       font-family: $lego-font;
       font-style: italic;
     }
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  section {
+    width: 44%;
+    margin: 24px;
+
+    .extraInfo {
+      height: 15.2%;
+    }
+  }
+}
+
+@media only screen and (min-width: 1000px) {
+  section {
+    margin-top: 32px;
+
+    .cardInfo {
+      height: 15%;
+    }
+
+    img {
+      width: 92%;
+      margin-left: 20px;
+    }
+
+    .extraInfo {
+      margin-top: 4px;
+
+      p {
+        font-size: 24px;
+      }
+    }
+  }
+}
+
+@media only screen and (min-width: 1100px) {
+  section {
+    width: 33%;
+    height: 55%;
   }
 }
