--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -5,8 +5,8 @@
 }
 
 .background {
-  height: 100vh;
-  width: 100vw; 
+  min-height: 100vh;
+  max-width: 100vw; 
   background-image: url("./assets/images/background.jpg");
   background-size: cover;
 }
